# spending

./: .gitignore  GEMINI.md  docker-compose.yml  run_python.sh
spending/: CONTINUE.md  Makefile  config.py  main.py  pyproject.toml  readme.md  use_cases.py  utils.py
spending/ai/: schema.py
spending/bot/: bot.py  context.py  handlers.py
spending/db/: __init__.py  db.py  mongo.py
spending/exports/: __init__.py  day.py  exporter.py  month.py
spending/graphs/: graphs.py  photo_to_receipt.py
spending/graphs/agents/: agents.py  calls.py  schema.py  schemas.py
spending/graphs/pipelines/: correct_receipt.py  full_pipeline.py  image_to_normailized_receipt.py  nodes.py  receipt_normalize.py  utils.py
spending/graphs/pipelines/photo_to_receipt/: local_ocr.py  openai_only.py
spending/integrations/: to_text.py
spending/to_text/: __init__.py  to_text.py
text_recognition/: Dockerfile  main.py  requirements.txt
