[project]
name = "spending"
version = "0.1.0"
description = ""
authors = [
    {name = "ku113p@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.12.13,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pymongo (>=4.13.2,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
